--- a/index.html
+++ b/index.html
@@ -1,12 +1,10 @@
-﻿<!DOCTYPE HTML PUBLIC "-//W3C//DTD HTML 4.01//EN"
-  "http://www.w3.org/TR/html4/strict.dtd">
+﻿<!DOCTYPE HTML>
 
 <html>
   <head>
-    <title>Falling Leaves &mdash; Using CSS Animations and Transforms</title>
+    <title>test</title>
     <meta http-equiv="Content-type" content="text/html; charset=utf-8">
     <meta name="viewport" content="width=500px, initial-scale=0.64">
-    <link rel="apple-touch-icon" href="images/apple-touch-icon.png"/>
     <!-- The leaves.css file animates the leaves -->
     <link rel="stylesheet" href="leaves.css" type="text/css" media="screen" charset="utf-8">
     <!-- The leaves.js file creates the leaves -->
@@ -18,9 +16,7 @@
       <!-- Its dimensions and position are defined using its id selector in leaves.css -->
       <div id="leafContainer"></div>
       <!-- its appearance, dimensions, and position are defined using its id selector in leaves.css -->
-      <div id="message">
-        
-      </div>
+      <div id="message"></div>
     </div>
   </body>
 </html>
